--- a/.github/workflows/cff-validator-complete-matrix.yml
+++ b/.github/workflows/cff-validator-complete-matrix.yml
@@ -32,3 +32,35 @@ jobs:
         uses: r-lib/actions/setup-r@v2
         with:
           install-r: false
+
+      - name: Restore R package cache
+        uses: actions/cache@v3
+        with:
+          path: ${{ env.R_LIBS_USER }}
+          key: ${{ runner.os }}-${{ hashFiles('.github/R-version') }}-3-${{ hashFiles('.github/depends.Rds') }}
+          restore-keys: ${{ runner.os }}-${{ hashFiles('.github/R-version') }}-3-
+
+      - name: Install packages
+        run: |
+          if (isFALSE(requireNamespace("remotes", quietly = TRUE))) {
+                    install.packages("remotes")
+          }
+          
+          if (isFALSE(requireNamespace("sessioninfo", quietly = TRUE))) {
+                    install.packages("sessioninfo")
+          }
+          remotes::install_cran(c("cffr","jsonlite"), upgrade = "always", quiet = TRUE)
+          
+          
+          if (requireNamespace("sessioninfo", quietly = TRUE)) {
+            if (packageVersion("sessioninfo") >= "1.2.1") {
+              sessioninfo::session_info(pkgs = "installed", include_base = TRUE)
+            } else {
+              options(width = 200)
+              sessioninfo::session_info(rownames(installed.packages()), include_base=TRUE)
+            }
+          } else {
+            sessionInfo()
+          }
+          
+        shell: Rscript {0}
