--- a/.github/workflows/cff-validator-complete-matrix.yml
+++ b/.github/workflows/cff-validator-complete-matrix.yml
@@ -33,12 +33,6 @@ jobs:
         run: |
           sudo apt-get install -y libv8-dev  
           
-      - name: Install curl
-        if: runner.os == 'Linux'
-        run: |
-          
-          sudo apt-get install -y libcurl-dev
-
       - name: Install R
         uses: r-lib/actions/setup-r@v2
         with:
@@ -55,14 +49,12 @@ jobs:
         run: |
         
           Sys.setenv(DOWNLOAD_STATIC_LIBV8 = 1)
-          if (isFALSE(requireNamespace("remotes", quietly = TRUE))) {
-                    install.packages("remotes")
+          if (isFALSE(requireNamespace("pak", quietly = TRUE))) {
+                    install.packages("pak")
           }
           
-          if (isFALSE(requireNamespace("sessioninfo", quietly = TRUE))) {
-                    install.packages("sessioninfo")
-          }
-          install.packages(c("V8","jsonvalidate" ,"cffr","jsonlite"), quiet = TRUE)
+          
+          pak::pkg_install(c("V8","jsonvalidate" ,"cffr","jsonlite", "sessioninfo"), upgrade = TRUE)
           
           
           if (requireNamespace("sessioninfo", quietly = TRUE)) {
