--- a/.github/workflows/cff-validator-complete-matrix.yml
+++ b/.github/workflows/cff-validator-complete-matrix.yml
@@ -49,6 +49,10 @@ jobs:
         run: |
         
           Sys.setenv(DOWNLOAD_STATIC_LIBV8 = 1)
+          if (isFALSE(requireNamespace("pkgdepends", quietly = TRUE))) {
+                    install.packages("pkgdepends")
+          }
+          
           if (isFALSE(requireNamespace("pak", quietly = TRUE))) {
                     install.packages("pak")
           }
