--- a/.github/workflows/cff-validator-complete-matrix.yml
+++ b/.github/workflows/cff-validator-complete-matrix.yml
@@ -36,7 +36,7 @@ jobs:
       - name: Install R
         uses: r-lib/actions/setup-r@v2
         with:
-          install-r: false
+          install-r: true
 
       - name: Restore R package cache
         uses: actions/cache@v3
