--- a/.github/workflows/cff-validator-complete-matrix.yml
+++ b/.github/workflows/cff-validator-complete-matrix.yml
@@ -29,42 +29,6 @@ jobs:
         uses: actions/checkout@v2 
           
       - name: Install R
-        uses: r-lib/actions/setup-r@v2
+        uses: dieghernan/testaction@main
         with:
-          install-r: true
-
-      - name: Restore R package cache
-        uses: actions/cache@v3
-        with:
-          path: ${{ env.R_LIBS_USER }}
-          key: ${{ runner.os }}-${{ hashFiles('.github/R-version') }}-5-${{ hashFiles('.github/depends.Rds') }}
-          restore-keys: ${{ runner.os }}-${{ hashFiles('.github/R-version') }}-5-
-          
-      - name: Install pak
-        run: |
-          # Install pak
-          install.packages("pak", repos = sprintf("https://r-lib.github.io/p/pak/stable/%s/%s/%s", .Platform$pkgType, R.Version()$os, R.Version()$arch))
-        shell: Rscript {0}
-
-
-      - name: Install dependencies
-        run: |
-          # Install/Update packages
-          Sys.setenv("PKGCACHE_HTTP_VERSION" = "2")
-          pak::pkg_install(c("cffr", "knitr", "sessioninfo"), upgrade = TRUE, dependencies = TRUE)
-        shell: Rscript {0}
-
-      - name: Session info
-        run: |
-          # Session info
-          if (requireNamespace("sessioninfo", quietly = TRUE)) {
-            if (packageVersion("sessioninfo") >= "1.2.1") {
-              sessioninfo::session_info(pkgs = "installed", include_base = TRUE)
-            } else {
-              options(width = 200)
-              sessioninfo::session_info(rownames(installed.packages()), include_base=TRUE)
-            }
-          } else {
-            sessionInfo()
-          }
-        shell: Rscript {0}
+          cache-version: 999
