--- a/action.yml
+++ b/action.yml
@@ -10,8 +10,8 @@ inputs:
     required: false
     default: 'CITATION.cff'
   cache-version:
-    description: 'The version of the cache, change this from the default (1) to start over with a fresh cache. Ignored if cache: false'
-    required: true
+    description: 'The version of the cache, change this from the default (1) to start over with a fresh cache.'
+    required: false
     default: 1
 runs:
   using: composite
@@ -25,8 +25,8 @@ runs:
         uses: actions/cache@v3
         with:
           path: ${{ env.R_LIBS_USER }}
-          key: ${{ runner.os }}-${{ hashFiles('.github/R-version') }}-{{ inputs.cache-version }}-${{ hashFiles('.github/depends.Rds') }}
-          restore-keys: ${{ runner.os }}-${{ hashFiles('.github/R-version') }}-{{ inputs.cache-version }}-
+          key: ${{ runner.os }}-${{ hashFiles('.github/R-version') }}-${{ inputs.cache-version }}-${{ hashFiles('.github/depends.Rds') }}
+          restore-keys: ${{ runner.os }}-${{ hashFiles('.github/R-version') }}-${{ inputs.cache-version }}-
 
       - name: Install pak
         run: |
@@ -39,6 +39,7 @@ runs:
 
       - name: Install dependencies
         run: |
+          # Install dependencies
           cat("::group::Install/update packages\n")
           cat("os-version=", sessionInfo()$running, "\n")
           # Install/Update packages
@@ -49,8 +50,8 @@ runs:
 
       - name: Session info
         run: |
-          cat("::group::Session info\n")
           # Session info
+          cat("::group::Session info\n")
           if (requireNamespace("sessioninfo", quietly = TRUE)) {
             if (packageVersion("sessioninfo") >= "1.2.1") {
               sessioninfo::session_info(pkgs = "installed", include_base = TRUE)
@@ -66,7 +67,8 @@ runs:
 
 
       - name: Validate cff
-        run: |
+        run: | 
+          # Validate cff
           cat("::group::Validating\n")
           citfile <- yaml::read_yaml("${{ inputs.citation-path }}")
           # All elements to character
@@ -114,9 +116,7 @@ runs:
                                                 schema_temp,
                                                 verbose = TRUE
           )
-          cat("::endgroup::\n")
           # Results
-          cat("Results")
           message("------\n")
           if (result == FALSE){
             print(knitr::kable(attributes(result)$errors, align = "l", caption = paste("${{ inputs.citation-path }}", "errors:")))
@@ -136,4 +136,5 @@ runs:
             message("${{ inputs.citation-path }} is valid.")
             message("\n\n------")
           }
+          cat("::endgroup::\n")
         shell: Rscript {0}
