--- a/action.yml
+++ b/action.yml
@@ -35,23 +35,8 @@ runs:
           install.packages("pak", repos = sprintf("https://r-lib.github.io/p/pak/stable/%s/%s/%s", .Platform$pkgType, R.Version()$os, R.Version()$arch))
           cat("::endgroup::\n")
         shell: Rscript {0}
-
-
-      - name: Install dependencies (Ubuntu)
-        if: runner.os == 'Linux'
-        run: |
-          # Install dependencies
-          cat("::group::Install/update packages RSPM\n")
-          cat("os-version=", sessionInfo()$running, "\n")
-          options(repos="https://packagemanager.rstudio.com/all/latest")
-          # Install/Update packages
-          Sys.setenv("PKGCACHE_HTTP_VERSION" = "2")
-          pak::pkg_install(c("cffr", "knitr", "sessioninfo"), upgrade = TRUE, dependencies = TRUE)
-          cat("::endgroup::\n")
-        shell: Rscript {0}
         
-      - name: Install dependencies (Non-Ubuntu)
-        if: runner.os != 'Linux'
+      - name: Install dependencies
         run: |
           # Install dependencies
           cat("::group::Install/update packages\n")
