--- a/.github/workflows/cff-validator-complete-matrix.yml
+++ b/.github/workflows/cff-validator-complete-matrix.yml
@@ -29,4 +29,4 @@ jobs:
         uses: actions/checkout@v2 
           
       - name: Validate CITATION.cff
-        uses: dieghernan/cff-validator@main
+        uses: dieghernan/cff-validator@v3
